fix z-index

--- a/app/scss/_animations.scss
+++ b/app/scss/_animations.scss
@@ -2,7 +2,6 @@
   0% {
     opacity: 0;
     visibility: hidden;
-    z-index: -99999;
   }
   100% {
     opacity: 1;
@@ -21,7 +20,6 @@
   100% {
     opacity: 0;
     visibility: hidden;
-    z-index: -99999;
   }
 }
 .fade-out {
